--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <meta name="keywords" content="Marvel, Rivels, MarvelRivels, Superhero">
 <meta http-equiv="refresh" content="5" />
 <title>Marvel Rivels</title>
+<style>body{
+    background-image: url('background.jpg'); /* Vervang 'background.jpg' door je afbeelding */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}</style>
 </head>
 
 <body>
