--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="5" />
 <title>Marvel Rivels</title>
 <style>body{
-    background-image: url('background.jpg'); /* Vervang 'background.jpg' door je afbeelding */
+    background-image: url('background.jpeg'); /* Vervang 'background.jpg' door je afbeelding */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
