--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <meta name="keywords" content="Marvel, Rivels, MarvelRivels, Superhero">
 <meta http-equiv="refresh" content="5" />
 <title>Marvel Rivels</title>
-<style>body{
-    background-image: URL("background.jpg"); /* Vervang 'background.jpg' door je afbeelding */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}</style>
+<style>
+        body {
+            background-image: url('background.jpeg'); /* Vervang dit door de juiste bestandsnaam */
+            background-size: cover; /* Zorgt ervoor dat de afbeelding de hele pagina vult */
+            background-repeat: no-repeat; /* Voorkomt herhaling */
+            background-position: center; /* Plaatst de afbeelding in het midden */
+        }
+    </style>
 </head>
 
 <body>
