--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Marvel Rivels</title>
 <style>
         body {
-            background-image: url('images/background.jpeg'); /* Vervang dit door de juiste bestandsnaam */
+            background-image: url('Images/background.jpeg'); /* Vervang dit door de juiste bestandsnaam */
             background-size: cover; /* Zorgt ervoor dat de afbeelding de hele pagina vult */
             background-repeat: no-repeat; /* Voorkomt herhaling */
             background-position: center; /* Plaatst de afbeelding in het midden */
