--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <meta http-equiv="refresh" content="5" />
 <title>Marvel Rivels</title>
 <style>
-        body {
-            background-image: url('Images/background.jpeg'); /* Vervang dit door de juiste bestandsnaam */
-            background-size: cover; /* Zorgt ervoor dat de afbeelding de hele pagina vult */
-            background-repeat: no-repeat; /* Voorkomt herhaling */
-            background-position: center; /* Plaatst de afbeelding in het midden */
-        }
-    </style>
+    body {
+        background-image: url("Images/background.jpeg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+</style>
 </head>
 
 <body>
