--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <meta http-equiv="refresh" content="5" />
 <title>Marvel Rivels</title>
 <style>
+     html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
     body {
         background-image: url("Images/background.jpeg");
         background-size: cover;
