--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
 <meta name="description" content="Marvel Rivels">
 <meta name="keywords" content="Marvel, Rivels, MarvelRivels, Superhero">
 <meta http-equiv="refresh" content="5" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Marvel Rivels</title>
 <style>
      html, body {
             margin: 0;
             padding: 0;
-            height: 100%;
+        }
+        .header-bar {
+            background-color: rgba(0, 0, 0, 0.7); /* Donkere semi-transparante achtergrond */
+            color: white; /* Witte tekst voor contrast */
+            padding: 20px; /* Ruimte binnen de balk */
+            font-family: Arial, sans-serif; /* Simpele lettertype */
+            text-align: center; /* Tekst gecentreerd */
         }
     body {
         background-image: url("Images/background.jpeg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        height: 100vh;
     }
 </style>
 </head>
 
 <body>
-    <h1>Marvel Rivels</h1>
-    <h2>Heroes</h2>
-    <p>In Marvel Rivals, there are 35 heroes and 16 team-ups. 
-    The heroes include well-known Marvel characters such as Spider-Man, Iron Man, Captain America, Hulk, and more.<br>
-    One of the team-ups is <strong>'Allied Agents':</strong> <a href="Hawkeye.html"><strong>Hawkeye</strong></a> e shares his Hunter's Sight with <a href="Black Widow.html"><strong>Black Widow</strong></a>, allowing her to see and damage enemy afterimages.</p>
-    </body>
+    <div class="header-bar">
+
+        <h1>Marvel Rivels</h1>
+        <h2>Heroes</h2>
+        <p>In Marvel Rivals, there are 35 heroes and 16 team-ups. 
+        The heroes include well-known Marvel characters such as Spider-Man, Iron Man, Captain America, Hulk, and more.<br>
+        One of the team-ups is <strong>'Allied Agents':</strong> <a href="Hawkeye.html"><strong>Hawkeye</strong></a> e shares his Hunter's Sight with <a href="Black Widow.html"><strong>Black Widow</strong></a>, allowing her to see and damage enemy afterimages.</p>
+        </div> </body>
 </html>
